# ergonet

./: README.md  pyproject.toml
demo/: demo_batch.py  demo_single.py  demo_video.py
ergonet/: __init__.py  ergonet_batch.py  ergonet_helper.py  ergonet_single.py  geometry.py  predictor.py  render.py  utils.py
ergonet/backbones/: resnet.py
ergonet/common/: imutils.py
ergonet/easy_ViTPose/: inference.py
